--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p>Use space, click or tap on your screen to jump over the cacti!</p>
     <canvas id="dinoGame"></canvas>
     <div id="scoreTxt">Score: 0</div>
-    <p><a href="https://git.gay/Atmois/dinoGame" target="_blank">Source Code</a> ~ <a href="https://atmois.com" target="_blank">Creator</a></p>
+    <p><a href="https://git.gay/Atmois/dinoGame" target="_blank">Source Code</a> ~ <a href="https://atmois.com" target="_blank">Creator</a> ~ <a href="https://games.atmois.com" target="_blank">Home Page</a></p>
     <button id="toggleDarkMode" class="button">☾</button>
     <script src="main.js"></script>
 </body>
